2005-05-11  T Rowley  <tim.rowley@gmail.com>

	* src/cairo-atsui-font.c:
	* src/cairo-atsui.h:
	* src/cairo-quartz-surface.c: Revive quartz backend.

2005-05-11  David Reveman  <davidr@novell.com>

	* src/cairo-glitz-surface.c (_cairo_glitz_surface_fill_rectangles): 
	Set fill type repeat on source surface.
	(_cairo_glitz_surface_show_glyphs): Add missing cairo operator to
	glitz operator conversion.
	(_cairo_glitz_surface_show_glyphs): Only render glyphs with non zero
	size. 

2005-05-11  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-surface.c (_fallback_fill_rectangles):
	Fix bounding box computation.

	* src/cairo-win32-surface.c: Patch from Tor Lillqvist
	to make things compile and work again.

	* test/cairo-test.c (create_win32_surface): Don't
	#error because there is no win32 test, it isn't useful. 
	Just skip it.

	* src/cairo-win32-font.c: Fix up matrix constness.

	* test/Makefile.am (TESTS): Skip the pdf-surface test
	if we don't have the PDF backend.

	* src/cairo-win32-surface.c (categorize_solid_dest_operator):
	Optimize fill_rectangles for all cases where the destination
	ends up a solid color.

2005-05-11  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c src/cairo-xlib.h: Remove leftover
	cairo_xlib_surface_create().

2005-05-10  Owen Taylor  <otaylor@redhat.com>

	* src/cairo.c src/cairo-path-data.c src/cairo-path-data-private.h:
	Pass the gstate to _cairo_path_data_create[_flat] and use
	_cairo_gstate_backend_to_user() so as to properly handle
	the surface device offset.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* src/cairo-arc.c (_cairo_arc_path_negative): Don't use return
	when calling a void function (thanks to Damien Carbery
	<damien.carbery@sun.com>). Closes bug #3134.

2005-05-10  Carl Worth  <cworth@cworth.org>

	* test/cairo-test.c:
	* test/cairo-test.h: Removing mucking around with stderr and add a
	cairo_test_log function instead.
	
	* test/buffer-diff.c:
	* test/create-for-png.c:
	* test/pdf-surface.c: