@@ -1,3 +1,8 @@
+2005-05-11  Owen Taylor  <otaylor@redhat.com>
+
+	* src/cairo-win32-surface.c (categorize_solid_dest_operator):
+	Handle more cases by assuming no-super-luminescent colors.
+
 2005-05-11  T Rowley  <tim.rowley@gmail.com>
 
 	* src/cairo-atsui-font.c:
